<resources>
    <string name="app_name">Touristy</string>
    <string name="api_key" translatable="false">AIzaSyDZ9Er0pqUttTXEctSvoB7NwDrz9ptnK74</string>
    <string name="Enter_your_email">Enter your email</string>
    <string name="Enter_your_username">Enter your email</string>
    <string name="Enter_your_password">Enter your Password</string>
    <string name="Confirm_your_password">Confirm your Password</string>
    <string name="Password_match">Your passwords do not match</string>
    <string name="Password">Password</string>
    <string name="Log_In">Log In</string>
    <string name="Dont_have_account">Don\'t have an account? Sign In.</string>
    <string name="Logging_In">Logging In</string>
    <string name="Logging_Out">Logging Out</string>
    <string name="Please_Wait">Please Wait</string>
    <string name="enterName">Enter your name</string>
    <string name="Last_name">Enter your last name</string>
    <string name="Birth_Date">Enter your birth date</string>
    <string name="Sign_In">Sign In</string>
    <string name="Already_have_account">Already have an account? Log In</string>
    <string name="home">Home</string>
    <string name="noNetwork">Please make sure you have an internet connection available.</string>
    <string name="logInError">An error occurred while trying to log in.</string>
    <string name="no_valid_email">Please enter a valid email\n e.g. example@example.com</string>
    <string name="wrongCreds">Invalid email or password.</string>
    <string name="username">Enter your username</string>
    <string name="Creating_Account">Creating Account</string>
    <string name="Name">Enter your name</string>
    <string name="Password_length">Password must contain at least 6 characters</string>
    <string name="signin_Successful"> User Registered Successfully</string>
    <string name="signin_Error">A problem occurred when registering the user.</string>
    <string name="FirstUseTile">Welcome to Touristy.</string>
    <string name="BeschrijvingSlide1">An app designed to walk and discover citys with your own created routes.</string>
    <string-array name="countriesList">
        <item>Belgium</item>
        <item>The Netherlands</item>
        <item>France</item>
        <item>Germany</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Antigua &amp; Deps</item>
        <item>Angola</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Rep</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Congo {Democratic Rep}</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland {Republic}</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea North</item>
        <item>Korea South</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar, {Burma}</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>The Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>St Kitts &amp;amp; Nevis</item>
        <item>St Lucia</item>
        <item>Saint Vincent &amp; the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome &amp; Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad &amp; Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_profile">My Profile</string>
    <string name="to_get_started_please_login">To get started, please login</string>
    <string name="log_in_or_create_a_new_account">Log in or create a new account</string>
    <string name="let_s_get_started">let\'s get started</string>
    <string name="drawer_menu_routes">Routes</string>
    <string name="drawer_menu_my_routes">My Routes</string>
    <string name="routes_no_title">No title</string>
    <string name="routes_no_info">no info</string>
    <string name="routeItem_no_user">no user</string>
    <string name="routeItem_no_description">no description</string>
    <string name="routes_fetching_error">An error occurred while fetching routes.</string>
    <string name="retry">Retry</string>
    <string name="Titel">Dit is de titel</string>
    <string name="Beschrijving1">Dit is de eerste beschrijving</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_current_route">Current Route</string>
    <string name="drawer_stop_route">Stop route</string>
    <string name="title_menu_github">View on GitHub</string>
    <string name="title_menu_reset_first_start">Reset "First start" flag</string>
    <string name="label_options">Options:</string>
    <string name="label_option_fullscreen">Enable fullscreen</string>
    <string name="label_option_scrollable">Scrollable slides</string>
    <string name="label_option_custom_fragments">Enable custom fragments</string>
    <string name="label_option_permissions">Enable permission request</string>
    <string name="label_option_show_back">Show back button</string>
    <string name="label_option_show_next">Show next button</string>
    <string name="label_option_skip_enabled">Enable skip button</string>
    <string name="label_option_finish_enabled">Enable finish button</string>
    <string name="label_option_get_started_enabled">Enable \"Get Started\" button</string>
    <string name="label_start_intro">Start intro</string>
    <string name="label_or">or</string>
    <string name="label_demos">Demos: </string>
    <string name="label_start_canteen">\"Canteen\" intro</string>
    <string name="label_start_splash">Splash screen</string>
    <string name="title_material_metaphor">Material is the metaphor</string>
    <string name="title_material_bold">Bold, graphic, intentional</string>
    <string name="title_material_motion">Motion provides meaning</string>
    <string name="title_material_shadow">Light and shadow</string>
    <string name="description_material_metaphor">A material metaphor is the unifying theory of a rationalized space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic.</string>
    <string name="start_route">Start Route</string>
</resources>