<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/drawer_menu_home" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_menu_route"
            android:title="@string/drawer_menu_routes" />
    </group>


    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/drawer_menu_profile" />
        <item
            android:id="@+id/nav_my_routes"
            android:icon="@drawable/ic_menu_route"
            android:title="@string/drawer_menu_my_routes" />
    </group>
</menu>